services/go-service/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service
  namespace: monorepo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: go-service
          command: ["./main"]
          args: ["http"]
          image: ghcr.io/ndrwj/monorepo-cfx/services/go-service
          ports:
            - containerPort: 8080
