services/go-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-service
  ports:
    - port: 80
      targetPort: 8080
